--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "1.6.50" !default;
+$mdi-version:          "1.7.12" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -49,6 +49,7 @@ $mdi-icons: (
     "alarm-multiple": F022,
     "alarm-off": F023,
     "alarm-plus": F024,
+    "alarm-snooze": F68D,
     "album": F025,
     "alert": F026,
     "alert-box": F027,
@@ -132,9 +133,11 @@ $mdi-icons: (
     "autorenew": F06A,
     "av-timer": F06B,
     "baby": F06C,
+    "baby-buggy": F68E,
     "backburger": F06D,
     "backspace": F06E,
     "backup-restore": F06F,
+    "bandcamp": F674,
     "bank": F070,
     "barcode": F071,
     "barcode-scan": F072,
@@ -170,6 +173,7 @@ $mdi-icons: (
     "battery-positive": F090,
     "battery-unknown": F091,
     "beach": F092,
+    "beaker": F68F,
     "beats": F097,
     "beer": F098,
     "behance": F099,
@@ -204,6 +208,7 @@ $mdi-icons: (
     "blur-linear": F0B6,
     "blur-off": F0B7,
     "blur-radial": F0B8,
+    "bomb": F690,
     "bone": F0B9,
     "book": F0BA,
     "book-minus": F5D9,
@@ -234,6 +239,7 @@ $mdi-icons: (
     "border-style": F0D0,
     "border-top": F0D1,
     "border-vertical": F0D2,
+    "bow-tie": F677,
     "bowl": F617,
     "bowling": F0D3,
     "box": F0D4,
@@ -273,6 +279,8 @@ $mdi-icons: (
     "calendar-multiple": F0F1,
     "calendar-multiple-check": F0F2,
     "calendar-plus": F0F3,
+    "calendar-question": F691,
+    "calendar-range": F678,
     "calendar-remove": F0F4,
     "calendar-text": F0F5,
     "calendar-today": F0F6,
@@ -286,6 +294,7 @@ $mdi-icons: (
     "camcorder-box-off": F0FE,
     "camcorder-off": F0FF,
     "camera": F100,
+    "camera-burst": F692,
     "camera-enhance": F101,
     "camera-front": F102,
     "camera-front-variant": F103,
@@ -421,10 +430,12 @@ $mdi-icons: (
     "code-parentheses": F172,
     "code-string": F173,
     "code-tags": F174,
+    "code-tags-check": F693,
     "codepen": F175,
     "coffee": F176,
     "coffee-to-go": F177,
     "coin": F178,
+    "coins": F694,
     "collage": F640,
     "color-helper": F179,
     "comment": F17A,
@@ -462,14 +473,17 @@ $mdi-icons: (
     "copyright": F5E6,
     "counter": F199,
     "cow": F19A,
+    "creation": F1C9,
     "credit-card": F19B,
     "credit-card-multiple": F19C,
     "credit-card-off": F5E4,
+    "credit-card-plus": F675,
     "credit-card-scan": F19D,
     "crop": F19E,
     "crop-free": F19F,
     "crop-landscape": F1A0,
     "crop-portrait": F1A1,
+    "crop-rotate": F695,
     "crop-square": F1A2,
     "crosshairs": F1A3,
     "crosshairs-gps": F1A4,
@@ -489,6 +503,7 @@ $mdi-icons: (
     "currency-rub": F1B1,
     "currency-try": F1B2,
     "currency-usd": F1B3,
+    "currency-usd-off": F679,
     "cursor-default": F1B4,
     "cursor-default-outline": F1B5,
     "cursor-move": F1B6,
@@ -503,6 +518,7 @@ $mdi-icons: (
     "decimal-decrease": F1BE,
     "decimal-increase": F1BF,
     "delete": F1C0,
+    "delete-circle": F682,
     "delete-forever": F5E8,
     "delete-sweep": F5E9,
     "delete-variant": F1C1,
@@ -511,6 +527,7 @@ $mdi-icons: (
     "desktop-mac": F1C4,
     "desktop-tower": F1C5,
     "details": F1C6,
+    "developer-board": F696,
     "deviantart": F1C7,
     "dialpad": F61C,
     "diamond": F1C8,
@@ -534,10 +551,14 @@ $mdi-icons: (
     "disqus-outline": F1D3,
     "division": F1D4,
     "division-box": F1D5,
+    "dna": F683,
     "dns": F1D6,
+    "do-not-disturb": F697,
+    "do-not-disturb-off": F698,
     "domain": F1D7,
     "dots-horizontal": F1D8,
     "dots-vertical": F1D9,
+    "douban": F699,
     "download": F1DA,
     "drag": F1DB,
     "drag-horizontal": F1DC,
@@ -566,7 +587,9 @@ $mdi-icons: (
     "email-variant": F5F0,
     "emoticon": F1F2,
     "emoticon-cool": F1F3,
+    "emoticon-dead": F69A,
     "emoticon-devil": F1F4,
+    "emoticon-excited": F69B,
     "emoticon-happy": F1F5,
     "emoticon-neutral": F1F6,
     "emoticon-poop": F1F7,
@@ -653,6 +676,7 @@ $mdi-icons: (
     "flash": F241,
     "flash-auto": F242,
     "flash-off": F243,
+    "flash-red-eye": F67A,
     "flashlight": F244,
     "flashlight-off": F245,
     "flask": F093,
@@ -678,6 +702,7 @@ $mdi-icons: (
     "folder-outline": F256,
     "folder-plus": F257,
     "folder-remove": F258,
+    "folder-star": F69C,
     "folder-upload": F259,
     "food": F25A,
     "food-apple": F25B,
@@ -695,6 +720,7 @@ $mdi-icons: (
     "format-bold": F264,
     "format-clear": F265,
     "format-color-fill": F266,
+    "format-color-text": F69D,
     "format-float-center": F267,
     "format-float-left": F268,
     "format-float-none": F269,
@@ -724,6 +750,7 @@ $mdi-icons: (
     "format-paint": F27C,
     "format-paragraph": F27D,
     "format-quote": F27E,
+    "format-section": F69E,
     "format-size": F27F,
     "format-strikethrough": F280,
     "format-strikethrough-variant": F281,
@@ -775,6 +802,7 @@ $mdi-icons: (
     "glasses": F2AA,
     "gmail": F2AB,
     "gnome": F2AC,
+    "gondola": F685,
     "google": F2AD,
     "google-cardboard": F2AE,
     "google-chrome": F2AF,
@@ -796,6 +824,7 @@ $mdi-icons: (
     "google-plus-box": F2BE,
     "google-translate": F2BF,
     "google-wallet": F2C0,
+    "gradient": F69F,
     "grease-pencil": F648,
     "grid": F2C1,
     "grid-off": F2C2,
@@ -804,6 +833,7 @@ $mdi-icons: (
     "guitar-pick": F2C5,
     "guitar-pick-outline": F2C6,
     "hackernews": F624,
+    "hamburger": F684,
     "hand-pointing-right": F2C7,
     "hanger": F2C8,
     "hangouts": F2C9,
@@ -831,6 +861,7 @@ $mdi-icons: (
     "home": F2DC,
     "home-map-marker": F5F8,
     "home-modern": F2DD,
+    "home-outline": F6A0,
     "home-variant": F2DE,
     "hops": F2DF,
     "hospital": F2E0,
@@ -866,7 +897,9 @@ $mdi-icons: (
     "image-filter-vintage": F2F8,
     "image-multiple": F2F9,
     "import": F2FA,
-    "inbox": F2FB,
+    "inbox": F686,
+    "inbox-arrow-down": F2FB,
+    "inbox-arrow-up": F3D1,
     "incognito": F5F9,
     "information": F2FC,
     "information-outline": F2FD,
@@ -875,6 +908,7 @@ $mdi-icons: (
     "instapaper": F2FF,
     "internet-explorer": F300,
     "invert-colors": F301,
+    "itunes": F676,
     "jeepney": F302,
     "jira": F303,
     "jsfiddle": F304,
@@ -985,6 +1019,8 @@ $mdi-icons: (
     "menu-up": F360,
     "message": F361,
     "message-alert": F362,
+    "message-bulleted": F6A1,
+    "message-bulleted-off": F6A2,
     "message-draw": F363,
     "message-image": F364,
     "message-outline": F365,
@@ -1055,6 +1091,7 @@ $mdi-icons: (
     "note-plus-outline": F39D,
     "note-text": F39E,
     "notification-clear-all": F39F,
+    "nuke": F6A3,
     "numeric": F3A0,
     "numeric-0-box": F3A1,
     "numeric-0-box-multiple-outline": F3A2,
@@ -1090,6 +1127,7 @@ $mdi-icons: (
     "numeric-9-plus-box-multiple-outline": F3C0,
     "numeric-9-plus-box-outline": F3C1,
     "nutrition": F3C2,
+    "oar": F67B,
     "octagon": F3C3,
     "octagon-outline": F3C4,
     "odnoklassniki": F3C5,
@@ -1105,7 +1143,6 @@ $mdi-icons: (
     "opera": F3CE,
     "ornament": F3CF,
     "ornament-variant": F3D0,
-    "outbox": F3D1,
     "owl": F3D2,
     "package": F3D3,
     "package-down": F3D4,
@@ -1159,6 +1196,7 @@ $mdi-icons: (
     "phone-voip": F3FE,
     "pi": F3FF,
     "pi-box": F400,
+    "piano": F67C,
     "pig": F401,
     "pill": F402,
     "pin": F403,
@@ -1200,6 +1238,8 @@ $mdi-icons: (
     "pound": F423,
     "pound-box": F424,
     "power": F425,
+    "power-plug": F6A4,
+    "power-plug-off": F6A5,
     "power-settings": F426,
     "power-socket": F427,
     "presentation": F428,
@@ -1212,6 +1252,7 @@ $mdi-icons: (
     "professional-hexagon": F42D,
     "projector": F42E,
     "projector-screen": F42F,
+    "publish": F6A6,
     "pulse": F430,
     "puzzle": F431,
     "qqchat": F605,
@@ -1251,6 +1292,8 @@ $mdi-icons: (
     "reload": F453,
     "remote": F454,
     "rename-box": F455,
+    "reorder-horizontal": F687,
+    "reorder-vertical": F688,
     "repeat": F456,
     "repeat-off": F457,
     "repeat-once": F458,
@@ -1260,12 +1303,15 @@ $mdi-icons: (
     "reproduction": F45C,
     "resize-bottom-right": F45D,
     "responsive": F45E,
+    "restore": F6A7,
     "rewind": F45F,
     "ribbon": F460,
     "road": F461,
     "road-variant": F462,
+    "robot": F6A8,
     "rocket": F463,
     "rotate-3d": F464,
+    "rotate-90": F6A9,
     "rotate-left": F465,
     "rotate-left-variant": F466,
     "rotate-right": F467,
@@ -1285,6 +1331,7 @@ $mdi-icons: (
     "scale": F472,
     "scale-balance": F5D1,
     "scale-bathroom": F473,
+    "scanner": F6AA,
     "school": F474,
     "screen-rotation": F475,
     "screen-rotation-lock": F476,
@@ -1301,6 +1348,7 @@ $mdi-icons: (
     "seat-recline-extra": F481,
     "seat-recline-normal": F482,
     "security": F483,
+    "security-home": F689,
     "security-network": F484,
     "select": F485,
     "select-all": F486,
@@ -1355,6 +1403,7 @@ $mdi-icons: (
     "skip-previous": F4AE,
     "skip-previous-circle": F663,
     "skip-previous-circle-outline": F664,
+    "skull": F68B,
     "skype": F4AF,
     "skype-business": F4B0,
     "slack": F4B1,
@@ -1366,6 +1415,7 @@ $mdi-icons: (
     "snowman": F4B7,
     "soccer": F4B8,
     "sofa": F4B9,
+    "solid": F68C,
     "sort": F4BA,
     "sort-alphabetical": F4BB,
     "sort-ascending": F4BC,
@@ -1412,7 +1462,8 @@ $mdi-icons: (
     "stove": F4DE,
     "subdirectory-arrow-left": F60C,
     "subdirectory-arrow-right": F60D,
-    "subway": F4DF,
+    "subway": F6AB,
+    "subway-variant": F4DF,
     "sunglasses": F4E0,
     "surround-sound": F5C5,
     "swap-horizontal": F4E1,
@@ -1441,6 +1492,7 @@ $mdi-icons: (
     "tablet-ipad": F4F8,
     "tag": F4F9,
     "tag-faces": F4FA,
+    "tag-heart": F68A,
     "tag-multiple": F4FB,
     "tag-outline": F4FC,
     "tag-text-outline": F4FD,
@@ -1481,6 +1533,7 @@ $mdi-icons: (
     "timer-3": F51D,
     "timer-off": F51E,
     "timer-sand": F51F,
+    "timer-sand-empty": F6AC,
     "timetable": F520,
     "toggle-switch": F521,
     "toggle-switch-off": F522,
@@ -1492,12 +1545,15 @@ $mdi-icons: (
     "tooltip-text": F528,
     "tooth": F529,
     "tor": F52A,
+    "tower-beach": F680,
+    "tower-fire": F681,
     "traffic-light": F52B,
     "train": F52C,
     "tram": F52D,
     "transcribe": F52E,
     "transcribe-close": F52F,
     "transfer": F530,
+    "transit-transfer": F6AD,
     "translate": F5CA,
     "tree": F531,
     "trello": F532,
@@ -1533,7 +1589,9 @@ $mdi-icons: (
     "unfold-less": F54E,
     "unfold-more": F54F,
     "ungroup": F550,
+    "unity": F6AE,
     "untappd": F551,
+    "update": F6AF,
     "upload": F552,
     "usb": F553,
     "vector-arrange-above": F554,
@@ -1597,6 +1655,7 @@ $mdi-icons: (
     "watch": F589,
     "watch-export": F58A,
     "watch-import": F58B,
+    "watch-vibrate": F6B0,
     "water": F58C,
     "water-off": F58D,
     "water-percent": F58E,
@@ -1606,11 +1665,13 @@ $mdi-icons: (
     "weather-fog": F591,
     "weather-hail": F592,
     "weather-lightning": F593,
+    "weather-lightning-rainy": F67D,
     "weather-night": F594,
     "weather-partlycloudy": F595,
     "weather-pouring": F596,
     "weather-rainy": F597,
     "weather-snowy": F598,
+    "weather-snowy-rainy": F67E,
     "weather-sunny": F599,
     "weather-sunset": F59A,
     "weather-sunset-down": F59B,
@@ -1656,6 +1717,7 @@ $mdi-icons: (
     "xml": F5C0,
     "yeast": F5C1,
     "yelp": F5C2,
+    "yin-yang": F67F,
     "youtube-play": F5C3,
     "zip-box": F5C4
 );
