--- a/scss/_extras.scss
+++ b/scss/_extras.scss
@@ -1,7 +1,11 @@
-.#{$mdi-css-prefix + '-18px'} { font-size: 18px; }
-.#{$mdi-css-prefix + '-24px'} { font-size: 24px; }
-.#{$mdi-css-prefix + '-36px'} { font-size: 36px; }
-.#{$mdi-css-prefix + '-48px'} { font-size: 48px; }
+.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-18px'},
+.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-18px'}:before { font-size: 18px; }
+.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-24px'},
+.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-24px'}:before { font-size: 24px; }
+.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-36px'},
+.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-36px'}:before { font-size: 36px; }
+.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-48px'},
+.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-48px'}:before { font-size: 48px; }
 .#{$mdi-css-prefix}-dark { color: rgba(0, 0, 0, 0.54); }
 .#{$mdi-css-prefix}-dark.mdi-inactive { color: rgba(0, 0, 0, 0.26); }
 .#{$mdi-css-prefix}-light { color: rgba(255, 255, 255, 1); }
