--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -2,6 +2,7 @@
 .#{$mdi-css-prefix}-set {
   display: inline-block;
   font: normal normal normal #{$mdi-font-size-base}/1 '#{$mdi-font-name}';
+  font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
