--- a/scss/_extras.scss
+++ b/scss/_extras.scss
@@ -1,15 +1,29 @@
-.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-18px'},
-.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-18px'}:before { font-size: 18px; }
-.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-24px'},
-.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-24px'}:before { font-size: 24px; }
-.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-36px'},
-.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-36px'}:before { font-size: 36px; }
-.#{$mdi-css-prefix}-set.#{$mdi-css-prefix + '-48px'},
-.#{$mdi-css-prefix}.#{$mdi-css-prefix + '-48px'}:before { font-size: 48px; }
-.#{$mdi-css-prefix}-dark { color: rgba(0, 0, 0, 0.54); }
-.#{$mdi-css-prefix}-dark.mdi-inactive { color: rgba(0, 0, 0, 0.26); }
-.#{$mdi-css-prefix}-light { color: rgba(255, 255, 255, 1); }
-.#{$mdi-css-prefix}-light.mdi-inactive { color: rgba(255, 255, 255, 0.3); }
+// material design recommended icon sizes
+$sizes: 18 24 36 48;
+@each $size in $sizes {
+    .#{$mdi-css-prefix}-#{$size}px {
+        &.#{$mdi-css-prefix}-set,
+        &.#{$mdi-css-prefix}:before {
+            font-size: $size * 1px; 
+        }
+    }
+}
+
+// material design recommended icon opacity
+.#{$mdi-css-prefix}-dark {
+    color: rgba(0, 0, 0, 0.54);
+    &.mdi-inactive {
+        color: rgba(0, 0, 0, 0.26);
+    }
+}
+.#{$mdi-css-prefix}-light {
+    color: rgba(255, 255, 255, 1);
+    &.mdi-inactive {
+        color: rgba(255, 255, 255, 0.3);
+    }
+}
+
+// rotation
 $degrees: 45 90 135 180 225 270 315;
 @each $degree in $degrees {
     .#{$mdi-css-prefix}-rotate-#{$degree} {
