--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -13,7 +13,8 @@
 
 @function mdi($name) {
     @if map-has-key($mdi-icons, $name) == false {
-      @return "";
+        @warn "Icon #{$name} not found.";
+        @return "";
     }
     @return char(map-get($mdi-icons, $name));
 }
