--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1,11 +1,16 @@
+// [1] shortening font declaration
+// [2] can't have font-size inherit on line above, so need to override
+// [3] optimizelegibility throws things off #1094
+// [4] ensures no half-pixel rendering in firefox
+
 .#{$mdi-css-prefix}:before,
 .#{$mdi-css-prefix}-set {
   display: inline-block;
-  font: normal normal normal #{$mdi-font-size-base}/1 '#{$mdi-font-name}'; // shortening font declaration
-  font-size: inherit; // can't have font-size inherit on line above, so need to override
-  text-rendering: auto; // optimizelegibility throws things off #1094
+  font: normal normal normal #{$mdi-font-size-base}/1 '#{$mdi-font-name}'; // [1]
+  font-size: inherit; // [2]
+  text-rendering: auto; // [3]
   line-height: inherit;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  transform: translate(0, 0); // ensures no half-pixel rendering in firefox
+  transform: translate(0, 0); // [4]
 }
